--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Salauddin World
                 Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings,
-                and stopping trains. But nobody pays me a dime
+                and stopping trains.But nobody pays me a dime
                 for that work. That's why I am learning and
                 mastering web development. I will not stop until
                 I become the Web Development Hero.</p>
@@ -41,12 +41,8 @@
         <div class="half-width1">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
-            <p>
-                I already learned the basic HTML and CSS.
-                I can build any simple website.
-                I can even teach my grandma how to make simple website.
-                My goal is to build 3 websites and learn advanced topics.
-            </p>
+            <p>I already learned the basic HTML and CSS.I can build any simple website.<br>I can even teach my grandma
+                a howto make simple website.My goal is <br> to build 3 websites and learn advanced topics.</p>
             <a class="link-button" target="_blank"
                 href="https://www.linkedin.com/in/sheikh-md-salauddin-a67878242/">DOWNLOAD RESUME</a>
 
